feat: custom exception