@@ -8,19 +8,19 @@ public class Client {
     public static void main(String[] args) {
         System.out.println("Hello Streams!");
 
-        List<Integer> list = List.of(12, 34, 56, 78, 90, 12, 13, 45, 68, 80);
+        List<String> list = List.of("Hello world","world of java","Hello streams");
 
-        for(Integer i: list){
-            if(i%2==0) {
-                System.out.println(i);
-            }
-        }
-
-        List<Integer> ls = list.stream()
-                .filter(((num) -> num % 2 ==0))
-                .sorted().map(x -> x * x)
+//        for(Integer i: list){
+//            if(i%2==0) {
+//                System.out.println(i);
+//            }
+//        }
+        //remove words from sentence to single word and make all lowercase and return list of distinct words only
+        List<String> ls = list.stream().
+                flatMap(s -> List.of(s.split(" ")).stream())
+                .map(s -> s.toLowerCase())
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
         System.out.println("Even Numbers using streams" + ls);
     }
